objects/Opp__c.object
<CustomObject>
    <fields>
        <fullName>ACV_APOString__c</fullName>
        <formula>IF(  ACV_APO__c   &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(ACV_APO__c) &gt;= 1000000, TEXT(FLOOR(ABS(ACV_APO__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(ACV_APO__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(ACV_APO__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(ACV_APO__c))), 3) &amp;

IF(ACV_APO__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV APOString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_APO__c</fullName>
        <label>ACV APO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACVcalculated__c</fullName>
        <label>ACVcalculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE</label>
        <referenceTo>AE__c</referenceTo>
        <relationshipLabel>Opps</relationshipLabel>
        <relationshipName>Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountName__c</fullName>
        <label>APOAccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOOppId__c</fullName>
        <label>APOOppId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opps</relationshipLabel>
        <relationshipName>Opps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseString__c</fullName>
        <formula>TEXT(Month( Close_Date__c )) &amp; &quot;/&quot; &amp; TEXT(DAY( Close_Date__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Close_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CloseString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncrementalString__c</fullName>
        <formula>IF(   Incremental__c    &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Incremental__c) &gt;= 1000000, TEXT(FLOOR(ABS(Incremental__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Incremental__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Incremental__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Incremental__c))), 3) &amp;

IF(Incremental__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncrementalString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incremental__c</fullName>
        <label>Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>$Label.CopadoDomain &amp; &quot;/lightning/r/Opportunity/&quot; &amp;   APOOppId__c  &amp; &quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>Opp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AE__c</columns>
        <columns>ACV_APO__c</columns>
        <columns>ACV_APOString__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Forecast__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <columns>APOOppId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>